--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,6 +31,10 @@ ion-menu {
   color: color($colors, grey-madera);
 }
 
+.item-ios {
+  color: color($colors, grey-madera);
+}
+
 .card-header-md{
   color: color($colors, brown-madera);
 }
