Essais menu avec image

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,30 @@
 <ion-split-pane>
+  <ion-header>
+    <ion-navbar>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Conception de devis</ion-title>
+    </ion-navbar>
+  </ion-header>
+
+
   <ion-menu [content]="content">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Menu</ion-title>
       </ion-toolbar>
     </ion-header>
 
     <ion-content>
       <ion-list>
-        <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <!--<button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
           {{p.title}}
-        </button>
+        </button>-->
+        <!--<input type="image" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" src="..\\assets\\imgs\\{{ p.img }}" value="{{ p.title }}"/>-->
+        <div class="menu-item" *ngFor="let p of pages">
+          <input type="image" menuClose ion-item (click)="openPage(p)" src="..\\assets\\imgs\\{{ p.img }}" value="{{ p.title }}"/>
+          <span>{{ p.title }}</span>
+        </div>
       </ion-list>
     </ion-content>
 
