--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,30 +1,25 @@
-<ion-split-pane>
-  <ion-header>
-    <ion-navbar>
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-      <img src="../../assets/imgs/logo.svg" class="imglogo" alt="Madera">
-    </ion-navbar>
-  </ion-header>
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <img src="../../assets/imgs/logo.svg" class="imglogo" alt="Madera">
+  </ion-navbar>
+</ion-header>
 
+<ion-split-pane>
 
   <ion-menu [content]="content">
-    <ion-header>
-      <ion-toolbar>
-          <img src="../../assets/imgs/logo.svg" class="imglogo" alt="Madera">
-      </ion-toolbar>
-    </ion-header>
-
-    <ion-content text-center>
-      <ion-list>
-        <div class="menu-item" *ngFor="let p of pages">
-          <input type="image" menuClose ion-item (click)="openPage(p)" src="..\\assets\\imgs\\{{ p.img }}" value="{{ p.title }}"/>
-          <span>{{ p.title }}</span>
+    <ion-content>
+      <a class="pageLink" menuClose ion-item (click)="openPage(page)" *ngFor="let page of pages">
+        <div text-center>
+          <img (click)="openPage(page)" src="..\\assets\\imgs\\{{ page.img }}" alt="{{ page.title }}"/>
         </div>
-      </ion-list>
+        <div text-center>
+          {{ page.title }}
+        </div>
+      </a>
     </ion-content>
-
   </ion-menu>
 
   <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
