--- a/src/pages/conception-devis/conception-devis.scss
+++ b/src/pages/conception-devis/conception-devis.scss
@@ -2,4 +2,14 @@ page-conception-devis {
   .border{
     border:solid 1px color($colors, grey-madera);
   }
+
+  .button_add{
+    background-color:color($colors, green-madera)
+  }
+
+  .button_remove{
+    background-color:color($colors, grey-madera)
+  }
 }
+
+
