--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,7 +21,11 @@ ion-menu {
         &.item-block .item-inner {
           border-bottom: 0;
         }
+      }
 
+      a.item-ios:not([detail-none]) .item-inner{
+        background-image: none;
+        padding-right: 0px;
       }
     }
 }
