--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,14 +5,18 @@ ion-menu {
         background-color: color($colors, green-madera);
       }
 
-      .pageLink {
+      .page-link {
         color: white;
         background-color: initial;
         padding: 12px;
 
         img{
           max-width:100px;
+          width:100px;
 
+          path{
+            fill:white;
+          }
         }
       }
 
