--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <img src="../../assets/imgs/logo.svg" class="imglogo" alt="Madera">
+    <img src="../../assets/imgs/logo.svg" class="img-logo" alt="Madera">
   </ion-navbar>
 </ion-header>
 
