--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,6 +23,7 @@
   color: color($colors, brown-madera);
 }
 
+//MENU
 ion-menu {
   ion-content{
     &.content-md,&.content-ios{
@@ -58,12 +59,6 @@ ion-menu {
   }
 }
 
-.split-pane-md.split-pane-visible > .split-pane-side {
-  top: 56px;
-  min-width: 264px;
-  max-width: 280px;
-}
-
-.imglogo{
+.img-logo{
   max-width: 100px;
  }
