--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -6,5 +6,10 @@ page-product {
     .left-side
     {
         width:20%;
+        display: inline-block;
+    }
+
+    .right-side{
+        display: inline-block;
     }
 }
