identification + nouveau-clien

--- a/src/pages/identification-client/identification-client.scss
+++ b/src/pages/identification-client/identification-client.scss
@@ -23,7 +23,14 @@ ion-content.content-md:not([padding]) .scroll-content {
   color: #95c11f;
   font-size: 6em;
 }
+.toolbar-title-ios {
+  color: #683c11;
+}
 .ion-card{
+  height: 100%;
+
+}
+.ion-card-new-customer{
   max-width: 200px;
 
 }
