identification + nouveau-clien

--- a/src/pages/identification-client/identification-client.scss
+++ b/src/pages/identification-client/identification-client.scss
@@ -22,6 +22,8 @@ ion-content.content-md:not([padding]) .scroll-content {
 .add-customer-icon{
   color: #95c11f;
   font-size: 6em;
+  margin: 0 auto;
+
 }
 .toolbar-title-ios {
   color: #683c11;
@@ -32,10 +34,13 @@ ion-content.content-md:not([padding]) .scroll-content {
 }
 .ion-card-new-customer{
   max-width: 200px;
+  margin: 0 auto;
+
 
 }
 .form-customer{
   max-width: 350px;
+  margin: 0 auto;
 
 }
 .ion-icon {
