--- a/src/pages/identification-projet/identification-projet.scss
+++ b/src/pages/identification-projet/identification-projet.scss
@@ -1,4 +1,4 @@
-page-identification-client {
+page-identification-projet {
 }
 .scroll-content {
   overflow: hidden;
@@ -21,6 +21,7 @@ ion-content.content-md:not([padding]) .scroll-content {
 .add-project-icon{
   color: #95c11f;
   font-size: 6em;
+  margin: 0 auto;
 }
 .toolbar-title-ios {
   color: #683c11;
@@ -32,10 +33,12 @@ ion-content.content-md:not([padding]) .scroll-content {
 .ion-card-project{
   max-height: 500px;
   max-width: 500px;
-}
-.ion-card-new-customer{
-  max-width: 200px;
+  margin: 0 auto;
 
+}
+.ion-card-new-project{
+  max-width: 200px;
+  margin: 0 auto;
 }
 .form-customer{
   max-width: 350px;
