--- a/src/pages/identification-projet/identification-projet.scss
+++ b/src/pages/identification-projet/identification-projet.scss
@@ -1,7 +1,5 @@
 
-.toolbar-title-md {
-  color: #683c11;
-}
+
 .button{
   float: right;
 }
@@ -19,11 +17,10 @@
 }
 .ion-card-project{
   max-height: 500px;
-  max-width: 500px;
   margin: 0 auto;
 
 }
-.ion-card-new-project{
+.ion-card-new-projects{
   max-width: 200px;
   margin: 0 auto;
 }
@@ -33,15 +30,22 @@
 }
 .ion-icon {
 }
-.text-project{
-  color:#683c11 ;
-}
-.text-project{
-  color:#683c11 ;
 
-}
 .customer-name{
   color: #955518;
+}
+
+.ion-card-new-project{
+  max-width: 200px;
+  margin: 0 auto;
+}
+.edit-icon{
+  color: #95c11f;
+  float: right;
+}
+.nom-projet-card{
+  color: #683c11;
+
 }
 
 
