LAST COMMIT OF THIS NIGHT <3

--- a/src/components/add-customer/add-customer.html
+++ b/src/components/add-customer/add-customer.html
@@ -6,6 +6,7 @@
 
   <ion-card class="ion-card">
     <ion-content padding>
+      <ion-icon name="arrow-back"  (click)="pop()"></ion-icon>
 
     <ion-card-content>
       <form #form="ngForm"(ngSubmit)="addCustomer(form)" >
