--- a/src/components/display-product/display-product.html
+++ b/src/components/display-product/display-product.html
@@ -1,6 +1,16 @@
 <ion-content padding text-center>
   <div>
-    {{product.modele.designationModele}}
+    <p>Réf. modèle : {{product.modele.referenceModele}}</p>
+    <p>Désignation : {{product.modele.designationModele}}</p>
+    <p>Description : {{product.modele.descriptionModele}}</p>
+    <img src="../../assets/imgs/modeles/{{product.modele.urlImageModele}}" width="100%" height="100%" alt="Plan Modèle {{ product.modele.designationModele }}"/>
+    <p>Modules :</p>
+    <ion-list class="border">
+      <p ion-item *ngFor="let module of product.modele.modules">
+        {{ module.designationModule }}
+      </p>
+    </ion-list>
+
   </div>
 
   <button ion-button color="green-madera" (click)="dismiss()">ANNULER</button>
