--- a/src/components/add-product/add-product.html
+++ b/src/components/add-product/add-product.html
@@ -49,7 +49,7 @@
     </ion-select>
   </ion-item>
 
-  <img src="../../assets/imgs/modeles/{{product.modele.urlImageModele}}" width="100%" height="100%" alt="Plan Modèle {{ product.modele.designationModele }}"/>
+  <img src="./assets/imgs/modeles/{{product.modele.urlImageModele}}" width="100%" height="100%" alt="Plan Modèle {{ product.modele.designationModele }}"/>
   <button ion-button color="green-madera" (click)="addProduct()" float-right>VALIDER</button>
   <button ion-button color="green-madera" (click)="dismiss()" float-right>ANNULER</button>
 
