--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
   <ion-content>
     <a class="page-link" menuClose ion-item (click)="openPage(page)" *ngFor="let page of pages">
       <div text-center>
-        <img src="..\\assets\\imgs\\{{ page.img }}" alt="{{ page.title }}"/>
+        <img src=".\\assets\\imgs\\{{ page.img }}" alt="{{ page.title }}"/>
       </div>
       <div text-center>
         {{ page.title }}
