--- a/src/pages/authentication/authentication.scss
+++ b/src/pages/authentication/authentication.scss
@@ -1,6 +1,6 @@
 page-authentication {
   .background {
-    background-image: url('../../assets/imgs/background.jpg');
+    background-image: url('../assets/imgs/background.jpg');
     background-position: center;
     height: 100%;
     width: 100%;
