--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,15 +5,12 @@
 // roboto, and noto sans fonts
 $font-path: "../assets/fonts";
 
-
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
 
-
 @import "ionic.globals";
-
 
 // Shared Variables
 // --------------------------------------------------
@@ -21,9 +18,6 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
-
-
-
 
 // Named Color Variables
 // --------------------------------------------------
@@ -44,27 +38,54 @@ $colors: (
   grey-madera: #999999
 );
 
+// All Variables
+// --------------------------------------------------
+$text-color : color($colors, grey-madera);
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
+// Menu
+$menu-ios-background : color($colors, green-madera);
 
+// Label
+$label-ios-text-color : color($colors, grey-madera);
+$label-ios-text-color-focused : color($colors, grey-madera);
 
+// Alert
+$alert-ios-button-text-color : color($colors, green-madera);
+
+// Toolbar Button
+$toolbar-ios-button-color : color($colors, green-madera);
+
+// Input
+$text-input-ios-highlight-color : color($colors, grey-madera);
+
+// Item
+$item-ios-paragraph-text-color : color($colors, grey-madera);
+$list-md-header-color : color($colors, grey-madera);
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
+// Toolbar Button
+$toolbar-md-button-color : color($colors, green-madera);
 
+// Label
+$label-md-text-color : color($colors, grey-madera);
+$label-md-text-color-focused : color($colors, grey-madera);
 
+// Input
+$text-input-md-highlight-color : color($colors, grey-madera);
+
+// Menu
+$menu-md-background : color($colors, green-madera);
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
-
 
 // App Theme
 // --------------------------------------------------
@@ -72,9 +93,7 @@ $colors: (
 // then be future customized. This import comes last
 // so that the above variables are used and Ionic's
 // default are overridden.
-
 @import "ionic.theme.default";
-
 
 // Ionicons
 // --------------------------------------------------
