--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -66,6 +66,10 @@ $text-input-ios-highlight-color : color($colors, grey-madera);
 $item-ios-paragraph-text-color : color($colors, grey-madera);
 $list-md-header-color : color($colors, grey-madera);
 
+// Card
+$card-ios-header-color: color($colors, brown-madera);
+$card-ios-text-color: color($colors, grey-madera);
+
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
@@ -82,6 +86,10 @@ $text-input-md-highlight-color : color($colors, grey-madera);
 
 // Menu
 $menu-md-background : color($colors, green-madera);
+
+// Card
+$card-md-header-color: color($colors, brown-madera);
+$card-md-text-color: color($colors, grey-madera);
 
 // App Windows Variables
 // --------------------------------------------------
