Améliorer le design - Passer par les variables Ionic plutôt que de surcharger le CSS - Optimisation des pages - Page Devis remaniée en tableau - Suppression de la modale Module - Apparition d'une erreur sur la page nouveau client

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -68,15 +68,26 @@ ion-content{
   }
 }
 
+// Utils
 .border{
   border:solid 1px color($colors, grey-madera);
 }
 
 .text-color-green-madera{
-  color : color($colors, green-madera);
+   color : color($colors, green-madera);
+ }
+
+.text-bold{
+  font-weight:600;
 }
 
 .height-max{
   height:100%;
+}
+
+// Alert
+.alert-head{
+  background-color:color($colors, green-madera);
+  color:white;
 }
 
